--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -32,5 +32,7 @@ jobs:
           file: Dockerfile
           platforms: linux/amd64
           push: true
+          build-args: |
+            IMAGE_TAG=linux
           tags: |
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.DOCKERHUB_REPOSITORY }}:latest
